--- a/button-playground/index.html
+++ b/button-playground/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Button Playground</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Button Playground!</h1>
+
+  <div class="button-1">Button Style One</div>
 
   <script src="js/scripts.js"></script>
 </body>
