--- a/button-playground/index.html
+++ b/button-playground/index.html
@@ -11,7 +11,7 @@
   
   <h1>Button Playground!</h1>
 
-  <div class="button-1">Button Style One</div>
+  <div class="button button-1"><span>Get in Touch</span></div>
 
   <script src="js/scripts.js"></script>
 </body>
