swapping out image for inline svg so we have access to fill color etc

--- a/button-playground/index.html
+++ b/button-playground/index.html
@@ -9,10 +9,17 @@
 
 <body>
   
-  <h1>Button Playground!</h1>
+	<h1>Button Playground!</h1>
 
-  <div class="button button-1"><span>Get in Touch</span></div>
+	<hr />
 
-  <script src="js/scripts.js"></script>
+	<div class="button button-1">
+		<span>Get in Touch</span>
+		<div class="icon-wrapper">
+			<svg xmlns="http://www.w3.org/2000/svg" width="15" height="14"><path class="cls-1" d="M14.38501,7.5l-.48004.51001-.01996.02997-5.54004,5.97003c-.27997.29999-.76001.32001-1.06.03998-.31-.27997-.32001-.76001-.03998-1.06l4.40002-4.73999H1.36499c-.40997,0-.75-.34003-.75-.75s.34003-.75.75-.75h10.28003L7.245,2.01001c-.28003-.29999-.27002-.78003.03998-1.06.29999-.28003.78003-.26001,1.06.03998l5.54004,5.97003.01996.02997.48004.51001Z"/></svg>
+		</div>
+	</div>
+
+	<script src="js/scripts.js"></script>
 </body>
 </html>
