--- a/button-playground/index.html
+++ b/button-playground/index.html
@@ -13,7 +13,7 @@
 
 	<hr />
 
-	<div class="button button-1">
+	<div class="button-1">
 		<span>Get in Touch</span>
 		<div class="icon-wrapper">
 			<svg xmlns="http://www.w3.org/2000/svg" width="15" height="14">
