--- a/webgl/index.html
+++ b/webgl/index.html
@@ -5,6 +5,8 @@
 	<title>WebGL</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
+	<script src="js/scripts.js" type="module"></script>
 </head>
 
 <body>
@@ -13,6 +15,5 @@
 
 	<canvas id="gl-canvas" width="640" height="480"></canvas>
 
-	<script src="js/scripts.js"></script>
 </body>
 </html>
